--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.url=jdbc:h2:mem:default
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.database=h2
-spring.h2.console.enabled = true
+spring.h2.console.enabled=true
+logging.level.=info
