rewrite init.sql and properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
+
+server.port=9999
+
 spring.datasource.url=jdbc:h2:mem:default
-#бага с неотображением драйвера - вернуть scope  в pom
 spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=user
+spring.datasource.password=pass
+spring.datasource.schema=classpath*:/database/init.sql
+spring.datasource.data=classpath*:/database/insertVacancy.sql
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.database=h2
+
 spring.h2.console.enabled=true
-logging.level.=info
+spring.h2.console.path=/h2console
+
+logging.level.root=INFO
