--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 
 server.port=9999
 
-spring.datasource.url=jdbc:h2:mem:default
+spring.datasource.url=jdbc:h2:~/test
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=user
-spring.datasource.password=pass
+spring.datasource.username=sa
+spring.datasource.password=
 spring.datasource.schema=classpath*:/database/init.sql
 spring.datasource.data=classpath*:/database/insertVacancy.sql
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
