--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-
 server.port=9999
-
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:h2:~/test
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
@@ -9,8 +8,7 @@ spring.datasource.schema=classpath*:/database/init.sql
 spring.datasource.data=classpath*:/database/insertVacancy.sql
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.database=h2
-
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2console
-
 logging.level.root=INFO
