--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,17 @@
 server.port=9999
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:h2:~/test
+#без команды ниже инициализация работать не будет
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.initialization-mode=embedded
+spring.jpa.database=h2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.schema=classpath*:/database/schema.sql
+spring.datasource.data=classpath*:/database/data.sql
 spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:~/test
+#spring.datasource.url=jdbc:h2:mem:default
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.schema=classpath*:/database/init.sql
-spring.datasource.data=classpath*:/database/insertVacancy.sql
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.database=h2
+spring.jpa.open-in-view=true
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2console
