--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.open-in-view=true
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+spring.jackson.default-property-inclusion=non_empty
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2console
 logging.level.root=INFO
