--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>tt_ss_sp_boot</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>VacancyRestApi</name>
+    <title>VacancyRestApi</title>
 
 
     <parent>
