--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.database=h2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.schema=classpath*:/database/schema.sql
 spring.datasource.data=classpath*:/database/data.sql
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.driver-class-title=org.h2.Driver
 spring.datasource.url=jdbc:h2:~/test
 #spring.datasource.url=jdbc:h2:mem:default
 spring.datasource.username=sa
